--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             height: 100%;
             background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
             background-size: 400% 400%;
-            animation: gradient 60s ease infinite;
+            animation: gradient 45s ease infinite;
             z-index: -1;
         }
         .content {
@@ -283,12 +283,12 @@
                     <div class="service-card">
                         <h3>Business Consulting</h3>
                         <p>Strategic planning, operational efficiency, financial advisory, and more.</p>
-                        <a href="business-consulting.html">Learn More →</a>
+                        <a href="business_consulting.html">Learn More →</a>
                     </div>
                     <div class="service-card">
                         <h3>Tech Solutions</h3>
                         <p>Web development, cybersecurity, IT infrastructure, and tech strategy consulting.</p>
-                        <a href="dizicon.html">Learn More →</a>
+                        <a href="tech_sol.html">Learn More →</a>
                     </div>
                 </div>
             </section>
