--- a/backend/static/index.html
+++ b/backend/static/index.html
@@ -307,7 +307,7 @@
                 <h2>Contact Us</h2>
                 <p>Ready to transform your business? Get in touch with our experts today.</p>
                 <section id="contact">
-                    <form id="contactForm" action="/rpgcapitalllc/api/save_contact" method="POST">
+                    <form id="contactForm" action="/api/save_contact" method="POST">
                         <div>
                             <label for="name">Name:</label>
                             <input type="text" id="name" name="name" required>
